# rapidmq

./: .gitignore  CNAME  Cargo.toml  Dockerfile  Feature_Specification_Implement_Clustering_for_Horizontal_Scaling.md  Go-To-Market-Strategy-RapidMQ.md  Makefile  README.md  RapidMQ Product Roadmap.md  RapidMQ-API-Documentation.md  RapidMQ-Architecture-Overview.md  RapidMQ-Deliverables-Checklist.md  RapidMQ-Deployment-Guide.md  RapidMQ-Product-Roadmap.md  RapidMQ-Store-and-Forward-Specification.md  RapidMQ_Product_Roadmap.md  build.rs  build.sh  dataProcessor.js  generate_certs.sh  index.html  organize_project.sh  package-lock.json  run_task.py  test_task.py
.github/workflows/: ci.yml
benches/: rapidmq_benchmarks.rs
config/: rapidmq.yaml
proto/: message.proto  rapidmq.proto  service1.proto  service2.proto
rapidmq-dashboard/: package-lock.json  package.json
scripts/: deploy.sh  run_benchmarks.sh  run_integration_tests.sh  run_performance_tests.sh  setup_dev_environment.sh
src/: App.css  App.js  App.test.js  ai_module.rs  api.rs  benchmarks.rs  cli.rs  cluster.rs  edge_node.rs  index.js  lib.rs  main.rs  message_broker.rs  metrics.rs  producer.rs  quantum_module.rs
src/api/: mod.rs
src/components/: ClusterStatus.js  MessageMetrics.js  SystemHealth.js  VoiceCommands.js
src/cuda/: kernels.cu  mod.rs
src/modules/: mod.rs
src/monitoring/: mod.rs
src/plugins/: mod.rs
src/rapidmq/: edge_node.py  message_broker.py  producer.py
static/: dashboard.html
test/: dataProcessor.test.js
tests/: integration_tests.rs  store_and_forward_steps.rs
tests/features/: store_and_forward.feature
