[package]
name = "rapidmq"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
raft = "0.7.0"
tonic = "0.8"
prost = "0.11"

[build-dependencies]
tonic-build = "0.8"

[[bin]]
name = "rapidmq"
path = "src/main.rs"