[package]
name = "rapidmq"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-web-actors = "4.2"
actix-files = "0.6"
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
raft = { version = "0.7.0", features = ["prost-codec"] }
tonic = "0.11"
prost = "0.12"
uuid = { version = "1.7", features = ["v4"] }
bcrypt = "0.15"
prometheus = "0.13"
lazy_static = "1.4"
rocksdb = "0.21"
openssl = "0.10"
tensorflow = "0.17.0"
qip = "0.12.0"
ndarray = "0.15.0"
bytes = "1.5"
rust-cuda = "0.1"

[build-dependencies]
tonic-build = "0.11"
prost-build = "0.12"

[[bin]]
name = "rapidmq"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
strip = true

[build]
jobs = 20

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "rapidmq_benchmarks"
harness = false